--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -147,17 +147,17 @@
       "metadata": {
         "id": "C570TJ4KcHN4",
         "colab_type": "code",
+        "outputId": "4b9234d3-e2ab-483b-912e-4a706d991240",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 530
-        },
-        "outputId": "480d9c32-ed82-4df1-82d0-8d96abc6e4eb"
+        }
       },
       "source": [
         "print(df.shape)\n",
         "df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,7 +428,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 97
         }
       ]
     },
@@ -437,16 +437,16 @@
       "metadata": {
         "id": "YMkIDwf6g8Nw",
         "colab_type": "code",
+        "outputId": "08ae0607-db39-40e2-c234-5d845ee86039",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 612
-        },
-        "outputId": "408c3c04-a12e-45ae-f664-3e684a8b8698"
+        }
       },
       "source": [
         "df.dtypes"
       ],
-      "execution_count": 12,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -492,7 +492,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 98
         }
       ]
     },
@@ -501,11 +501,11 @@
       "metadata": {
         "id": "jqhevUkwiUW3",
         "colab_type": "code",
+        "outputId": "64f86eef-9e72-4d55-bd50-482e42958614",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "eb2070a3-33ce-4590-fc5a-86f45b611665"
+        }
       },
       "source": [
         "#okay our data frame is already restricted to the total domain we want to work\n",
@@ -513,7 +513,7 @@
         "print(df['created'].max())\n",
         "print(df['created'].min())"
       ],
-      "execution_count": 16,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,11 +605,11 @@
       "metadata": {
         "id": "yMxGMFKep-nA",
         "colab_type": "code",
+        "outputId": "8eb54f8a-cb77-4c22-a37d-d08e5893986e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 530
-        },
-        "outputId": "7b6f00d3-c2d3-4da7-f9c7-9fe438b297c7"
+        }
       },
       "source": [
         "df['perf_fit'] = df.apply(perf_fit, axis = 1)\n",
@@ -617,7 +617,7 @@
         "print(df.shape)\n",
         "df.head()"
       ],
-      "execution_count": 23,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "stream",
@@ -900,7 +900,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 103
         }
       ]
     },
@@ -909,17 +909,17 @@
       "metadata": {
         "id": "bJDTpRwEqWHc",
         "colab_type": "code",
+        "outputId": "85ba6ee7-b738-4bac-feb0-bad97e7a164d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "ecbc4267-727d-43f0-ecf0-e42f5d539834"
+        }
       },
       "source": [
         "# a little curious.\n",
         "df['perf_fit'].value_counts()"
       ],
-      "execution_count": 24,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -933,7 +933,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 104
         }
       ]
     },
@@ -942,17 +942,17 @@
       "metadata": {
         "id": "4H9rjSefrTfY",
         "colab_type": "code",
+        "outputId": "d5cd07b5-2ebb-4d32-d8bc-4379042c47f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "71714052-f133-4cd8-f8e1-4131c771851e"
+        }
       },
       "source": [
         "#kind of expected that\n",
         "df['perf_amen'].value_counts()"
       ],
-      "execution_count": 25,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -966,7 +966,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 105
         }
       ]
     },
@@ -985,11 +985,11 @@
       "metadata": {
         "id": "29WTA0uOsFvc",
         "colab_type": "code",
+        "outputId": "9e28aebf-2bde-46b1-a3ff-e338e4f6f7c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 564
-        },
-        "outputId": "13f31334-5aa2-488a-9867-73a9925453b8"
+        }
       },
       "source": [
         "#B) split data into training and testing sets\n",
@@ -1010,7 +1010,7 @@
         "print('The min date for training is: ', train['datetime'].min())\n",
         "train.head()"
       ],
-      "execution_count": 32,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "stream",
@@ -1301,7 +1301,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 106
         }
       ]
     },
@@ -1310,11 +1310,11 @@
       "metadata": {
         "id": "8LTSXpt5uaMp",
         "colab_type": "code",
+        "outputId": "7c4291c6-4d24-4668-8615-0786c9de61c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 564
-        },
-        "outputId": "1e035990-7666-4f10-fa38-8a9fa71c7387"
+        }
       },
       "source": [
         "#both are looking good\n",
@@ -1323,7 +1323,7 @@
         "print('The min date for test is: ', test['datetime'].min())\n",
         "test.head()"
       ],
-      "execution_count": 49,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "stream",
@@ -1614,7 +1614,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 49
+          "execution_count": 107
         }
       ]
     },
@@ -1649,11 +1649,11 @@
       "metadata": {
         "id": "FYuAb-ETxJEw",
         "colab_type": "code",
+        "outputId": "1f7823e9-6a44-48af-da6c-cc5729e7e5e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "3935e79e-1605-41fa-ae80-d0a9de46e171"
+        }
       },
       "source": [
         "#3 arrange X feature matrix, and y target vector.  Since we will be fitting\n",
@@ -1664,7 +1664,7 @@
         "\n",
         "print(X.shape, y.shape)"
       ],
-      "execution_count": 35,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
@@ -1680,17 +1680,17 @@
       "metadata": {
         "id": "N3NPnXKjx5sN",
         "colab_type": "code",
+        "outputId": "7ad4cff1-b6e0-4f68-d6da-a1433ce830d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "9eaa1907-74f3-491b-b3b2-0bfb0a283d7f"
+        }
       },
       "source": [
         "#4 fit the model\n",
         "model.fit(X, y)"
       ],
-      "execution_count": 36,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1702,7 +1702,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 110
         }
       ]
     },
@@ -1711,11 +1711,11 @@
       "metadata": {
         "id": "EC8FwRV30PoK",
         "colab_type": "code",
+        "outputId": "7cc855ae-fb9c-4641-cec0-b65cbbd38d7c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "e97ed365-da90-4776-950e-7652be0ffecf"
+        }
       },
       "source": [
         "#mvp\n",
@@ -1723,7 +1723,7 @@
         "print('The coeficient of my perfect amenities is: ', model.coef_[1])\n",
         "print('The intercept of the model is: ', model.intercept_)"
       ],
-      "execution_count": 39,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "stream",
@@ -1754,11 +1754,11 @@
       "metadata": {
         "id": "HbsX3YvzyBK-",
         "colab_type": "code",
+        "outputId": "6a3b6260-849e-4c44-a43d-3042de27370a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "54f2f90a-c8ce-497b-e0c1-5777dc57b5ce"
+        }
       },
       "source": [
         "#5 apply to new (test) data\n",
@@ -1767,7 +1767,7 @@
         "y_pred = model.predict(X_test)\n",
         "y_pred.shape"
       ],
-      "execution_count": 50,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1779,7 +1779,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 50
+          "execution_count": 112
         }
       ]
     },
@@ -1803,15 +1803,18 @@
       "source": [
         "#D make a function for RMSE, MAE, and R2\n",
         "\n",
-        "def reg_metrics(true, pred):\n",
+        "def reg_metrics(true, pred, verbose = True):\n",
         "  mse = mean_squared_error(true, pred)\n",
         "  rmse = np.sqrt(mse)\n",
         "  mae = mean_absolute_error(true, pred)\n",
         "  r2 = r2_score(true, pred)\n",
         "\n",
-        "  print('Mean Squared Error: ', mse)\n",
-        "  print('Root Mean Squared Error (RMSE): ', rmse)\n",
-        "  print('Mean Absolute Error (MAE): ', mae)\n"
+        "  if verbose:\n",
+        "    print('Mean Squared Error: ', mse)\n",
+        "    print('Root Mean Squared Error (RMSE): ', rmse)\n",
+        "    print('Mean Absolute Error (MAE): ', mae)\n",
+        "\n",
+        "  return (mse, rmse, mae)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1821,16 +1824,16 @@
       "metadata": {
         "id": "S0uwNJX13wbc",
         "colab_type": "code",
+        "outputId": "b315b5aa-4b16-4709-f4f4-1e1ed69ef449",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
-        },
-        "outputId": "b98cde66-87a7-43ad-d0ee-db94d607ded9"
+          "height": 85
+        }
       },
       "source": [
         "reg_metrics(test['price'], y_pred)"
       ],
-      "execution_count": 55,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "stream",
@@ -1840,6 +1843,18 @@
             "Mean Absolute Error (MAE):  1099.3256228879616\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2709129.261961033, 1645.9432742233353, 1099.3256228879616)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 114
         }
       ]
     },
@@ -1858,16 +1873,16 @@
       "metadata": {
         "id": "OjI-oZfT-jKF",
         "colab_type": "code",
+        "outputId": "f81faf7b-a0aa-4ecc-ba89-0c814713a713",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
-        },
-        "outputId": "53137c28-afe9-4356-865d-e627cc8e679b"
+        }
       },
       "source": [
         "df.columns"
       ],
-      "execution_count": 56,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1888,7 +1903,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 56
+          "execution_count": 115
         }
       ]
     },
@@ -1897,44 +1912,128 @@
       "metadata": {
         "id": "OYRcI8hmGLFh",
         "colab_type": "code",
+        "outputId": "6a0e4256-2d65-4afb-97a6-7aa4f9e1b399",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "381e14b4-4693-4109-ddef-0db192655c4c"
+        }
       },
       "source": [
-        "columns = ['bathrooms', 'bedrooms', 'latitude', 'longitude', 'price', \n",
-        "        'interest_level', 'elevator', 'cats_allowed', 'hardwood_floors', 'dogs_allowed',\n",
+        "#okay lets pair this down to just the columns I want to do any analysis with.\n",
+        "columns = ['bathrooms', 'bedrooms', 'latitude', 'longitude', \n",
+        "        'elevator', 'cats_allowed', 'hardwood_floors', 'dogs_allowed',\n",
         "       'doorman', 'dishwasher', 'no_fee', 'laundry_in_building',\n",
         "       'fitness_center', 'pre-war', 'laundry_in_unit', 'roof_deck',\n",
         "       'outdoor_space', 'dining_room', 'high_speed_internet', 'balcony',\n",
         "       'swimming_pool', 'new_construction', 'terrace', 'exclusive', 'loft',\n",
         "       'garden_patio', 'wheelchair_access', 'common_outdoor_space', 'perf_fit',\n",
-        "       'perf_amen', 'datetime']\n",
+        "       'perf_amen']\n",
         "\n",
         "len(columns)"
       ],
-      "execution_count": 58,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "33"
+              "30"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 58
+          "execution_count": 120
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "-jLqk1IwdwDw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from itertools import combinations\n",
+        "from time import process_time"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "V4-_J-9FHF7M",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "2e97dca9-ae83-42bb-eac4-ab1f8f525229"
+      },
+      "source": [
+        "#this is so intimidating in other languages.  I love python.  I'm going to use\n",
+        "#itertools combination to create an array of all combinations, then I'm going to\n",
+        "#just run a whole bunch of models and tests.\n",
+        "\n",
+        "start = process_time()\n",
+        "\n",
+        "#ehhh, I don't strictly have to do this, because it is same as above, but I'm\n",
+        "#doing it here for good form.\n",
+        "y = train['price']\n",
+        "\n",
+        "#we are starting with a not awesome mean average error so it will be quickly\n",
+        "#replaced\n",
+        "best_mae = 1000 \n",
+        "\n",
+        "\n",
+        "for i in range(1, 5):\n",
+        "\n",
+        "  #okay if I red docs right, this is making a list of tuples of every combo\n",
+        "  combos = list(combinations(columns, i))\n",
+        "\n",
+        "  for j in range(len(combos)):\n",
+        "\n",
+        "    #i want a list of our features, so I need to cast a tuple as a list\n",
+        "    features = list(combos[j])\n",
+        "\n",
+        "    X = train[features]\n",
+        "\n",
+        "    model.fit(X, y)\n",
+        "\n",
+        "    X_test = test[features]\n",
+        "\n",
+        "    y_pred = model.predict(X_test)\n",
+        "\n",
+        "    mae = reg_metrics(test['price'], y_pred, verbose = False)[2]\n",
+        "\n",
+        "    if mae < best_mae:\n",
+        "      best_mae = mae\n",
+        "      best_features = features\n",
+        "\n",
+        "end = process_time()\n",
+        "print(best_mae)\n",
+        "print(best_features)\n",
+        "print('Processing time in seconds', end - start)"
+      ],
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "714.4965535457955\n",
+            "['bathrooms', 'bedrooms', 'longitude', 'doorman']\n",
+            "Processing time in seconds 644.9399397349998\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dUUy5FIvitpe",
         "colab_type": "code",
         "colab": {}
       },
