--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -1970,7 +1970,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "2e97dca9-ae83-42bb-eac4-ab1f8f525229"
+        "outputId": "cad5ec30-580d-4aa5-e6ce-33fdf25e3d26"
       },
       "source": [
         "#this is so intimidating in other languages.  I love python.  I'm going to use\n",
@@ -1988,7 +1988,7 @@
         "best_mae = 1000 \n",
         "\n",
         "\n",
-        "for i in range(1, 5):\n",
+        "for i in range(1, 7):\n",
         "\n",
         "  #okay if I red docs right, this is making a list of tuples of every combo\n",
         "  combos = list(combinations(columns, i))\n",
@@ -2017,14 +2017,14 @@
         "print(best_features)\n",
         "print('Processing time in seconds', end - start)"
       ],
-      "execution_count": 123,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "714.4965535457955\n",
-            "['bathrooms', 'bedrooms', 'longitude', 'doorman']\n",
-            "Processing time in seconds 644.9399397349998\n"
+            "708.111666481563\n",
+            "['bathrooms', 'bedrooms', 'longitude', 'doorman', 'laundry_in_unit', 'high_speed_internet']\n",
+            "Processing time in seconds 18469.574651719002\n"
           ],
           "name": "stdout"
         }
