--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -2488,6 +2488,44 @@
       "metadata": {
         "id": "eeZx3-zhxTaN",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 205
+        },
+        "outputId": "5fa8c6f1-7529-49c6-c099-1f681c12938b"
+      },
+      "source": [
+        "# I will choose 37 features because it gave the best mean absolute error for\n",
+        "# for the test set\n",
+        "selector = SelectKBest(score_func=f_regression, k=37)\n",
+        "X_train_selected = selector.fit_transform(X_train, y_train)\n",
+        "X_test_selected = selector.transform(X_test)"
+      ],
+      "execution_count": 284,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/feature_selection/_univariate_selection.py:299: RuntimeWarning: divide by zero encountered in true_divide\n",
+            "  corr /= X_norms\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/feature_selection/_univariate_selection.py:304: RuntimeWarning: invalid value encountered in true_divide\n",
+            "  F = corr ** 2 / (1 - corr ** 2) * degrees_of_freedom\n",
+            "/usr/local/lib/python3.6/dist-packages/scipy/stats/_distn_infrastructure.py:903: RuntimeWarning: invalid value encountered in greater\n",
+            "  return (a < x) & (x < b)\n",
+            "/usr/local/lib/python3.6/dist-packages/scipy/stats/_distn_infrastructure.py:903: RuntimeWarning: invalid value encountered in less\n",
+            "  return (a < x) & (x < b)\n",
+            "/usr/local/lib/python3.6/dist-packages/scipy/stats/_distn_infrastructure.py:1912: RuntimeWarning: invalid value encountered in less_equal\n",
+            "  cond2 = cond0 & (x <= _a)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6d0WP9OX9lL7",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
