--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -1393,6 +1393,90 @@
         "#Stretch goal\n",
         "Find the best combination of features that generates the lowest mae."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4X_uwoEMBxxD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#okay this is going to have to be a couple of nested loops I think.\n",
+        "#first loop increases the number of features in SelectKBest, the second loop\n",
+        "#will iteratively increas the alpha.  We store the MAE of all these combinations\n",
+        "#and keep the lowest MAE generated."
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oPJQV4OtCRby",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "ca383115-94d2-44d8-c7f3-4ffb703f45d6"
+      },
+      "source": [
+        "best_mae = 300000\n",
+        "\n",
+        "#first loop\n",
+        "for k in range(1, len(X_train.columns) + 1):\n",
+        "\n",
+        "  selector = SelectKBest(score_func = f_regression, k = k)\n",
+        "  X_train_selected = selector.fit_transform(X_train, y_train)\n",
+        "  X_test_selected = selector.transform(X_test)\n",
+        "\n",
+        "  #second loop\n",
+        "  for alpha in [10**1, 10**2, 10**3, 10**4, 10**5, 10**6]:\n",
+        "    model = Ridge(alpha = alpha, normalize = True)\n",
+        "    model.fit(X_train_selected, y_train)\n",
+        "    y_pred = model.predict(X_test_selected)\n",
+        "\n",
+        "    mae = mean_absolute_error(y_test, y_pred)\n",
+        "\n",
+        "    if mae < best_mae:\n",
+        "      best_mae = mae\n",
+        "      best_alpha = alpha\n",
+        "      best_features = k\n",
+        "\n",
+        "    #print(f'Features: {k}')\n",
+        "    #print(f'Alpha {alpha}')\n",
+        "    #print(f'MAE: ${mae}')\n",
+        "\n",
+        "print(f'Best number of Features: {best_features}')\n",
+        "print(f'Best aplha: {best_alpha}')\n",
+        "print(f'Best MAE: ${best_mae}')"
+      ],
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Best number of Features: 37\n",
+            "Best aplha: 10\n",
+            "Best MAE: $205728.41958499164\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u6Q_Ri0CDvji",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
